--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Meysam Keshvari</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -11,7 +11,7 @@
   <div class="w3-half w3-black w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
       <h1></h1>
-      <img src="images/img_logo.jpg" class="w3-margin w3-circle" alt="Person" style="width:25%">
+      <!--<img src="" class="w3-margin w3-circle" alt="Person" style="width:25%">-->
     </div>
     <div class="w3-padding-64">
       <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
@@ -23,10 +23,10 @@
   <div class="w3-half w3-blue-grey w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
-      <img src="images/img_logo.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
+      <img src="images/img_avatar.png" class="w3-margin w3-circle" alt="Person" style="width:35%">
       <div class="w3-left-align w3-padding-large">
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p>Android Developer, graduate student of Software Engineering interested in various aspects of Software Engineering...</p>
+        <p></p>
       </div>
     </div>
   </div>
@@ -36,7 +36,7 @@
 <div class="w3-row">
   <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
-      <h2>My Work</h2>
+      <h2>My Projects</h2>
       <p>Some of my latest projects.</p>
     </div>
     <div class="w3-row">
@@ -121,9 +121,9 @@
     </div>
     <div class="w3-padding-64">
       <p>..for a cup of coffee, or whatever.</p>
-      <p>Chicago, US</p>
-      <p>+00 1515151515</p>
-      <p>test@test.com</p>
+      <p>Tehran, IRAN</p>
+      <p></p>
+      <p>MeysamKeshvari@gmail.com</p>
     </div>
   </div>
   <div class="w3-half w3-teal w3-container" style="height:700px">
